@@ -4,9 +4,9 @@ import no.kristiania.database.Status;
 import no.kristiania.database.StatusDao;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.Socket;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.sql.SQLException;
 
 public class StatusOptionsController implements HttpController{
@@ -23,10 +23,10 @@ public class StatusOptionsController implements HttpController{
         response.write(clientSocket);
     }
 
-    public String getBody() throws SQLException, UnsupportedEncodingException {
+    public String getBody() throws SQLException {
         String body = "";
         for (Status status : statusDao.list()) {
-            body += "<option value=" + status.getId() + ">" + URLDecoder.decode(status.getName(), "UTF-8") + "</option>";
+            body += "<option value=" + status.getId() + ">" + URLDecoder.decode(status.getName(), StandardCharsets.UTF_8) + "</option>";
         }
         return body;
     }
